--- a/app/partials/recognizee.html
+++ b/app/partials/recognizee.html
@@ -45,7 +45,7 @@
 					
 					
 			<!-- 	<option value="1" selected="selected">本人</option>
-				<option value="2">父亲</option>
+				<option value="2">父母</option>
 				<option value="3">子女</option>
 				<option value="4">配偶</option>
 				<option value="5">同事</option>
