--- a/app/partials/about_nuobei.html
+++ b/app/partials/about_nuobei.html
@@ -15,7 +15,7 @@
 		<div class="nuobei_head">个性定制</div>
 		<div class="nuobei_info">通过简单的资料设定 了解用户的需求</div>
 		<div class="nuobei_img">
-			<img src="img/about_nuobei/img_24.png" srcset="img/about_nuobei/img_24.png 568w, img/about_nuobei/img_34.png.png 667w, img/about_nuobei/img_34.png 736w">
+			<img src="img/about_nuobei/img_24.png" srcset="img/about_nuobei/img_24.png 568w, img/about_nuobei/img_34.png 667w, img/about_nuobei/img_34.png 736w">
 			<!-- <img src=""> -->
 		</div>
 	</div>
@@ -25,7 +25,7 @@
 		<div class="nuobei_word">建立科学的用户模型 根据职能算法</div>
 		<div class="nuobei_info">帮助用户管理已有保险 推荐需要补充的保险</div>
 		<div class="nuobei_img">
-			<img src="img/about_nuobei/img_25.png" srcset="img/about_nuobei/img_25.png 568w, img/about_nuobei/img_35.png.png 667w, img/about_nuobei/img_35.png 736w">
+			<img src="img/about_nuobei/img_25.png" srcset="img/about_nuobei/img_25.png 568w, img/about_nuobei/img_35.png 667w, img/about_nuobei/img_35.png 736w">
 			<!-- <img src=""> -->
 		</div>
 	</div>
@@ -35,7 +35,7 @@
 		<div class="nuobei_word">对保险产品进行精细打分</div>
 		<div class="nuobei_info">让用户轻松了解保险产品的各项指标</div>
 		<div class="nuobei_img">
-			<img src="img/about_nuobei/img_26.png" srcset="img/about_nuobei/img_26.png 568w, img/about_nuobei/img_36.png.png 667w, img/about_nuobei/img_36.png 736w">
+			<img src="img/about_nuobei/img_26.png" srcset="img/about_nuobei/img_26.png 568w, img/about_nuobei/img_36.png 667w, img/about_nuobei/img_36.png 736w">
 			<!-- <img src=""> -->
 		</div>
 	</div>
@@ -44,7 +44,7 @@
 		<div class="nuobei_head">一站式方案</div>
 		<div class="nuobei_info"> 集合多家产品 提供一站式了解方案</div>
 		<div class="nuobei_img">
-			<img src="img/about_nuobei/img_27.png" srcset="img/about_nuobei/img_27.png 568w, img/about_nuobei/img_37.png.png 667w, img/about_nuobei/img_37.png 736w">
+			<img src="img/about_nuobei/img_27.png" srcset="img/about_nuobei/img_27.png 568w, img/about_nuobei/img_37.png 667w, img/about_nuobei/img_37.png 736w">
 		</div>
 	</div>
 </div>
