--- a/app/partials/error.html
+++ b/app/partials/error.html
@@ -1,15 +1,15 @@
-
-
 	<style>
 		.error-message{
+			margin:100px 0;
 			text-align: center;
 			color:#999;	
+			font-size:15px;
 		}
 		.btn-wrapper{
 			padding:0 35px;
 		}
 	</style>
-	<div class="eeror-message">抱歉，您的支付已超时</div>
+	<div class="error-message">抱歉，您的支付已超时</div>
 	<div class="btn-wrapper">
 		<a href="/"><div class="ybwx-btn ybwx-btn--primary">返回首页</div></a>
 	</div>
