--- a/app/wx_share/partials/dental.html
+++ b/app/wx_share/partials/dental.html
@@ -81,7 +81,7 @@
             </div>
             <div class="pyq-info">购买套餐并分享至朋友圈，即得<span>18.8元现金</span>红包，有朋友购买再得<span>30元现金</span>红包。</div>
             <a href="javascript:;" ng-click="showShareTip()" class="pyq-btn">立即分享</a>
-            <p class="pyq-stats">已有 <span>{{data.invited}}</span> 位好友领取</p>
+            <p class="pyq-stats">已有 <span>{{data.valid}}</span> 位好友购买</p>
         </div>
         <div class="rule-box mt20">
             <div class="rule-title">活动规则</div>
